lib_LIBRARIES = libsec_api.a
include_HEADERS = sec_security.h sec_security_common.h sec_security_utils.h sec_security_store.h sec_security_cmac.h sec_security_openssl.h
libsec_api_a_SOURCES = sec_security_common.c sec_security_utils.c sec_security_store.c sec_security_cmac.c sec_security_openssl.c
AM_CFLAGS = -DSEC_PLATFORM_OPENSSL -Wall -Werror -Wno-unused-result
